[package]
name = "wechat-pay-apiv3"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["security"]


[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4.17"
aes-gcm = {version = "0.10.1", features = ["heapless"]}
rsa = {version = "0.6.1"}
num-bigint-dig = "0.8.1"
base64 = "0.13.0"
sha2 = "0.10.5"
x509-parser = "0.14.0"
os_info = {version = "3.5.0", default-features = false}
lazy_static = "1.4.0"
reqwest = {version = "0.11.11", features = ["multipart", "json", "blocking"]}
chrono = "0.4.22"

[dependencies.security]
package = "security"
path = "security"

[features]
certs-manager = []