[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
num-bigint-dig = "0.8.1"
os_info = {version = "3.5.0", default-features = false}
lazy_static = "1.4.0"
reqwest = {version = "0.11.11", features = ["multipart", "json"]}
async-trait = "0.1.57"

[dependencies.security]
path = "../security"
features = ["__sha2", "__rsa", "__aes"]

[features]
blocking = ["reqwest/blocking"]